# easyborg

./: .gitignore  CHANGELOG.md  EXPERT.md  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini
.github/workflows/: pypi-publish.yml  release.yml  tests-linux.yml  tests-macos.yml  tests.yml  update-homebrew.yml
.run/: Ruff Check.run.xml  Unit Tests.run.xml
config/: default-easyborg.toml  easyborg.toml
documentation/: BORG.md  DEVELOPMENT.md  EXPERT.md  RELEASE.md  TODO.md
easyborg/: __main__.py  borg.py  cli.py  config.py  context.py  core.py  cron.py  fzf.py  log_utils.py  logging_setup.py  model.py  process.py  progress_parser.py  ui.py  util.py
easyborg/resources/: template-easyborg.toml
recording/: RECORDING.md
src/: borg_backup.py
src/easyborg/: __main__.py  borg.py  cli.py  config.py  context.py  core.py  cron.py  fzf.py  interaction.py  log_utils.py  logging_setup.py  model.py  process.py  progress_parser.py  theme.py  ui.py  util.py  utilities.py
src/easyborg/command/: archive.py  backup.py  delete.py  doctor.py  extract.py  info.py  open.py  replace.py  restore.py
src/easyborg/resources/: template-easyborg.toml
terminalizer/: README.md  config.yml
tests/: conftest.py  test_borg.py  test_borg_backup.py  test_core.py  test_core_restore.py  test_parse_progress.py  test_util_merge.py  test_utils.py  test_utils_remove_redundant_paths.py
tests/command/: test_archive.py  test_backup.py  test_delete.py  test_extract.py  test_replace.py  test_restore.py
tests/helpers/: fakes.py
tests/resources/testdata/: file 1.txt
tests/utilities/: utilities.py
tools/: easyborg.rb.template  generate_homebrew_formula.py  get_project_version.py
tools/changelog/: extract_changelog.py
tools/homebrew/: HOMEBREW.md  easyborg.rb.template  generate_homebrew_formula.py
