[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyborg"
version = "0.1.0"
description = "Borg for Dummies"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "click",
    "cloup",
    "rich"
]

[project.scripts]
easyborg = "easyborg.cli:main"

# Development-only dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["easyborg"]

[tool.ruff.lint]
select = [
    "E", # Pycodestyle (basic errors)
    "F", # Pyflakes (unused imports, etc.)
    "W", # Warnings
    "I", # Import sorting (isort behavior)
    "UP", # pyupgrade: e.g., prefer dict[str, int] over Dict[str, int]
]

[tool.ruff.format]
quote-style = "double"