[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyborg"
version = "1.0.0"
description = "Borg for Dummies"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"

license = { text = "MIT" }

authors = [
    { name = "Sebastian Haberey", email = "sebastian@haberey.com" }
]

dependencies = [
    "click",
    "cloup",
    "rich",
    "platformdirs"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/sebastianhaberey/easyborg"
Repository = "https://github.com/sebastianhaberey/easyborg"
"Bug Tracker" = "https://github.com/sebastianhaberey/easyborg/issues"

[project.scripts]
easyborg = "easyborg.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests*",
]

[tool.setuptools.package-data]
easyborg = ["resources/template-easyborg.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["easyborg"]

[tool.ruff.lint]
select = [
    "E", # Pycodestyle (basic errors)
    "F", # Pyflakes (unused imports, etc.)
    "W", # Warnings
    "I", # Import sorting (isort behavior)
    "UP", # pyupgrade: e.g., prefer dict[str, int] over Dict[str, int]
]

[tool.ruff.format]
quote-style = "double"
