[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyborg"
version = "1.0.1"
description = "Borg for Dummies"
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"

authors = [
    { name = "Sebastian Haberey", email = "sebastian@haberey.com" }
]

dependencies = [
    "click>=8.3.1",
    "cloup>=3.0.8",
    "rich>=14.2.0",
    "platformdirs>=4.5.1"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/sebastianhaberey/easyborg"
Repository = "https://github.com/sebastianhaberey/easyborg"
"Bug Tracker" = "https://github.com/sebastianhaberey/easyborg/issues"
Changelog = "https://github.com/sebastianhaberey/easyborg/blob/main/CHANGELOG.md"

[project.scripts]
easyborg = "easyborg.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
easyborg = ["resources/template-easyborg.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tools"]

[tool.ruff.lint]
select = [
    "E", # Pycodestyle (basic errors)
    "F", # Pyflakes (unused imports, etc.)
    "W", # Warnings
    "I", # Import sorting (isort behavior)
    "UP", # pyupgrade: e.g., prefer dict[str, int] over Dict[str, int]
]

[tool.ruff.format]
quote-style = "double"
